added file loader; started layout coding;

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,2 +1,8 @@
-head,body
-    margin: 0 auto
+main
+    article
+        height: 600px
+        background-image: url('../img/index.jpg')
+        background-size: cover
+        background-position: center
+    img
+        display: none
