--- a/src/index.pug
+++ b/src/index.pug
@@ -6,3 +6,4 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Rent-A-Flat
   body
+    include ./layout/main-layout.pug
