finished template; added font-awesome; changed file structure layout;

--- a/src/layout/containers/header.pug
+++ b/src/layout/containers/header.pug
@@ -2,4 +2,4 @@ header
     aside
         h1 ТВОЯ КРЕПОСТЬ
         h2 АГЕНТСТВО НЕДВИЖИМОСТИ
-    include navbar.pug
+    include ./header/navbar.pug
