--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -6,6 +6,9 @@ head,body
   display: table
   clear: both
 
+img
+    display: none
+
 @import "header.sass"
 @import "navbar.sass"
 @import "main.sass"
