--- a/src/layout/main-layout.pug
+++ b/src/layout/main-layout.pug
@@ -1,5 +1,5 @@
-include header.pug
+include ./containers/header.pug
 
-include main.pug
+include ./containers/main.pug
 
-include footer.pug
+include ./containers/footer.pug
