--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,6 +1,20 @@
-header
+header.header
     margin: 0 auto
+    padding: 25px 0
 
     aside
+        text-align: right
+        vertical-align: middle
         display: inline-block
-        width: 40%
+        margin-left: 150px
+
+        h1,h2
+            color: $main-color
+            font-size: 16px
+            margin: 0 auto
+        
+        h1
+            font-weight: bolder
+        
+        h2
+            font-weight: normal
