--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,14 +1,12 @@
 head,body
     margin: 0 auto
-
-.clearfix:after
-  content: ""
-  display: table
-  clear: both
+    font-family: Arial,Helvetica,sans-serif
 
 img
     display: none
 
+@import "vars.sass"
+@import "helpers.sass"
 @import "header.sass"
 @import "navbar.sass"
 @import "main.sass"
