--- a/src/styles/navbar.sass
+++ b/src/styles/navbar.sass
@@ -1,16 +1,39 @@
+$selected-color: #CBB492;
+//$item-color: #283B62;
+$hover-color: #8E99B1;
+
 nav
+    display: inline-block
+    margin-left: 150px
+    text-align: center
+    vertical-align: middle
+    color: $main-color
 
     ul
         list-style: none
         margin: 0 auto
         padding: 0
-        text-align: center
+
+        li:last-child
+            margin-right: 0
 
         li
-            display: inline-block
+            float: left
+            transition: color 0.4s ease 0s
+            cursor: default
+            margin-right: 60px
+
+            &.active, &.active:hover
+                color: $selected-color
+
+            &:hover
+                color: $hover-color
+                cursor: pointer
 
             a
                 display: inline-block
 
                 p
-                    display: inline-block
+                    margin: 0 auto
+                    text-transform: uppercase
+                    font-size: 14px
