commercials section done;

--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -1,2 +1,20 @@
 article.main
-    img(src="./img/index.jpg")
+    section.carousel
+        img(src="./img/index.jpg")
+    section.commercials
+        aside.description
+            h2
+                p ПРОДАЕТСЯ ДОМ
+                p 6 КОМНАТ
+                p 300 м²
+                p В ПОДМОСКОВЬЕ
+            h3 Это текст. Здесь вы можете рассказать подробнее об объекте, который выставлен на продажу.
+            hr
+            p.price 20 000 000 ₽
+            a.contact(href="#") Связаться
+        aside.phone
+            p
+                span
+                    a(href="tel:+7 (495) 000-00-00")
+                        i.fa.fa-phone-square
+                            span +7 (495) 000-00-00
