--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,11 +1,12 @@
+@import "vars.sass"
+
 head,body
     margin: 0 auto
-    font-family: Arial,Helvetica,sans-serif
+    font-family: $main-font
 
 img
     display: none
 
-@import "vars.sass"
 @import "helpers.sass"
 @import "header.sass"
 @import "navbar.sass"
