finished sell section;

--- a/src/pages/rent/houses.pug
+++ b/src/pages/rent/houses.pug
@@ -1,7 +1,7 @@
 -
     var list = [
         {
-            image: './img/flat_4.webp',
+            image: './img/flat_4.png',
             title: 'КУРКИНО',
             price: '5 000 ₽ в неделю',
             description: 'Описание квартиры на продажу номер 4',
@@ -9,7 +9,7 @@
             href: '#'
         },
         {
-            image: './img/flat_5.webp',
+            image: './img/flat_5.png',
             title: 'КОРОБОВО',
             price: '450 ₽ в неделю',
             description: 'Описание квартиры на продажу номер 5',
