--- a/src/pages/sell.pug
+++ b/src/pages/sell.pug
@@ -1,3 +1,4 @@
 article.sell-section
     h2 ДОМА В ПРОДАЖЕ
-    include ./sell/houses.pug
+    .container.clearfix
+        include ./sell/houses.pug
