--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,2 +1,5 @@
 $main-color: #283B62;
 $main-font: Arial,Helvetica,sans-serif;
+$selected-color: #CBB492;
+$item-color: #283B62;
+$hover-color: #8E99B1;
