--- a/src/pages/comments.pug
+++ b/src/pages/comments.pug
@@ -1,3 +1,5 @@
 article.comments-section
-    h2 ОТЗЫВЫ КЛИЕНТОВ
-    include ./comments/comments.pug
+    .overlay
+        h2 ОТЗЫВЫ КЛИЕНТОВ
+        .container
+            include ./comments/comments.pug
