--- a/src/pages/comments/comments.pug
+++ b/src/pages/comments/comments.pug
@@ -2,19 +2,20 @@
     var list = [
         {
             author: 'Анатолий Первых',
-            comment: 'Это комментарий #1'
+            comment: 'Это отзыв Клиента. Отредактируйте его, напишите хороший отзыв о вашей компании и услугах.'
         },
         {
             author: 'Иван Фадеев',
-            comment: 'Это комментарий #2'
+            comment: 'Это отзыв Клиента. Отредактируйте его, напишите хороший отзыв о вашей компании и услугах.'
         },
         {
             author: 'Андрей Большов',
-            comment: 'Это комментарий #3'
+            comment: 'Это отзыв Клиента. Отредактируйте его, напишите хороший отзыв о вашей компании и услугах.'
         }
     ]
 each item in list
     section
-        span
-        h3= item.comment
-        h4= item.author
+        span.icon
+            i.fa.fa-quote-left
+        p.comment= item.comment
+        p.author= ' - ' + item.author
