--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,5 +1,6 @@
-$main-color: #283B62;
+$main-color: #1D3054;
+$secondary-color: #283B5F;
 $main-font: Arial,Helvetica,sans-serif;
 $selected-color: #CBB492;
-$item-color: #283B62;
+$item-color: $main-color;
 $hover-color: #8E99B1;
