--- a/src/layout/containers/footer.pug
+++ b/src/layout/containers/footer.pug
@@ -1,5 +1,6 @@
 footer
     h2 СВЯЖИТЕСЬ С НАМИ
-    include ./footer/contacts.pug
-    section.copyright
+    .container.clearfix
+        include ./footer/contacts.pug
+    article.copyright
         p © 2018 Агентство недвижимости.
