added todo file; finished all sections;

--- a/src/layout/containers/footer.pug
+++ b/src/layout/containers/footer.pug
@@ -3,4 +3,4 @@ footer
     .container.clearfix
         include ./footer/contacts.pug
     article.copyright
-        p © 2018 Агентство недвижимости.
+        h3 © 2018 Агентство недвижимости.
