--- a/src/pages/rent/houses.pug
+++ b/src/pages/rent/houses.pug
@@ -4,7 +4,7 @@
             image: './img/flat_4.png',
             title: 'КУРКИНО',
             price: '5 000 ₽ в неделю',
-            description: 'Описание квартиры на аренду номер 1',
+            description: 'Это описание квартиры на аренду номер 1. Отредактируйте текст, чтобы рассказать своим клиентам про данную квартиру.',
             bedrooms: 4,
             href: '#',
             class: 'first'
@@ -13,7 +13,7 @@
             image: './img/flat_5.png',
             title: 'КОРОБОВО',
             price: '450 ₽ в неделю',
-            description: 'Описание квартиры на аренду номер 2',
+            description: 'Это описание квартиры на аренду номер 2. Отредактируйте текст, чтобы рассказать своим клиентам про данную квартиру.',
             bedrooms: 3,
             href: '#',
             class: 'second'
