--- a/src/pages/sell/houses.pug
+++ b/src/pages/sell/houses.pug
@@ -4,7 +4,7 @@
             image: './img/flat_1.png',
             title: 'НЕМЧИНОВКА',
             price: '25 000 000 ₽',
-            description: 'Описание квартиры на продажу номер 1',
+            description: 'Это описание квартиры на продажу номер 1. Отредактируйте текст, чтобы рассказать своим клиентам про данную квартиру.',
             bedrooms: 4,
             href: '#'
         },
@@ -12,7 +12,7 @@
             image: './img/flat_2.png',
             title: 'МАРУШКИНО',
             price: '35 000 000 ₽',
-            description: 'Описание квартиры на продажу номер 2',
+            description: 'Это описание квартиры на продажу номер 2. Отредактируйте текст, чтобы рассказать своим клиентам про данную квартиру.',
             bedrooms: 3,
             href: '#'
         },
@@ -20,7 +20,7 @@
             image: './img/flat_3.png',
             title: 'РОДНИКИ',
             price: '45 000 000 ₽',
-            description: 'Описание квартиры на продажу номер 3',
+            description: 'Это описание квартиры на продажу номер 3. Отредактируйте текст, чтобы рассказать своим клиентам про данную квартиру.',
             bedrooms: 6,
             href: '#'
         }
