--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -172,6 +172,7 @@ article.rent-section
             figure
                 margin: 0 auto 30px
                 color: white
+                max-width: 400px
                 
                 figcaption
                     padding: 0 0 20px
