--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -15,6 +15,6 @@ article.main
         aside.phone
             p
                 span
-                    a(href="tel:+7 (495) 000-00-00")
+                    a(href="tel:+74950000000")
                         i.fa.fa-phone-square
                             span +7 (495) 000-00-00
