--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -2,5 +2,5 @@ $main-color: #1D3054;
 $secondary-color: #283B5F;
 $main-font: Arial,Helvetica,sans-serif;
 $selected-color: #CBB492;
-$item-color: $main-color;
+$item-color: #E9E9E8;
 $hover-color: #8E99B1;
