--- a/src/pages/rent/houses.pug
+++ b/src/pages/rent/houses.pug
@@ -20,7 +20,7 @@
         }
     ]
 each item in list
-    section(class=item.class)
+    section.clearfix(class=item.class)
         h3(style="background-image:url(" + item.image + ")")
             img(src=item.image)
         figure
