--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -7,6 +7,9 @@ head,body
 img
     display: none
 
+.slick-slide img
+    display: none !important
+
 @import "helpers.sass"
 @import "header.sass"
 @import "footer.sass"
